--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"remark-gfm": "^1.0.0"
 	},
 	"devDependencies": {
+		"@parcel/transformer-image": "^2.0.0-beta.2",
 		"babel-preset-nano-react-app": "^0.1.0",
 		"parcel": "^2.0.0-alpha.3.2"
 	},
