--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
 		"react-copy-to-clipboard": "^5.0.3",
 		"react-dom": "^17.0.1",
 		"react-markdown": "^5.0.3",
+		"react-router-dom": "^6.1.1",
 		"react-syntax-highlighter": "^15.4.3",
-		"remark-gfm": "^1.0.0"
+		"remark-gfm": "^1.0.0",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"@parcel/transformer-image": "^2.0.0-beta.2",
