--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@material-ui/core": "^4.11.2",
+		"@material-ui/core": "^4.12.3",
 		"@material-ui/icons": "^4.11.2",
-		"micromark": "^2.11.2",
-		"micromark-extension-gfm": "^0.3.2",
-		"react": "^17.0.1",
-		"react-copy-to-clipboard": "^5.0.3",
-		"react-dom": "^17.0.1",
-		"react-markdown": "^5.0.3",
+		"micromark": "^3.0.10",
+		"micromark-extension-gfm": "^2.0.0",
+		"react": "^17.0.2",
+		"react-copy-to-clipboard": "^5.0.4",
+		"react-dom": "^17.0.2",
+		"react-markdown": "^7.1.1",
 		"react-router-dom": "^6.1.1",
-		"react-syntax-highlighter": "^15.4.3",
-		"remark-gfm": "^1.0.0",
+		"react-syntax-highlighter": "^15.4.5",
+		"remark-gfm": "^3.0.1",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
-		"@parcel/transformer-image": "^2.0.0-beta.2",
+		"@parcel/transformer-image": "^2.0.1",
 		"babel-preset-nano-react-app": "^0.1.0",
-		"parcel": "^2.0.0-alpha.3.2"
+		"parcel": "^2.0.1"
 	},
 	"babel": {
 		"presets": [
