--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-markdown": "^7.1.1",
 		"react-router-dom": "^6.1.1",
 		"react-syntax-highlighter": "^15.4.5",
+		"rehype-raw": "^6.1.0",
 		"remark-gfm": "^3.0.1",
 		"uuid": "^8.3.2"
 	},
