--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	"dependencies": {
 		"@material-ui/core": "^4.12.3",
 		"@material-ui/icons": "^4.11.2",
+		"localbase": "^0.7.5",
+		"material-ui-dropzone": "^3.5.0",
 		"micromark": "^3.0.10",
 		"micromark-extension-gfm": "^2.0.0",
 		"react": "^17.0.2",
